# atom-bond-featurizer

./: .buildinfo  .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  bonafide.features.html  bonafide.html  bonafide.utils.html  bonafide_env.yml  bonafide_env_dev.yml  bonafide_user.html  bonds.html  check_bonafide_installation.py  config_settings.html  custom.html  dependencies.html  electronic_structure.html  external_environment.html  feature_list.html  feature_notes.html  features.html  genindex.html  index.html  input.html  installation.html  modules.html  modules_user.html  mypy.ini  notes.html  objects.inv  output.html  post_install_setup.py  py-modindex.html  pyproject.toml  pytest.ini  ruff.toml  search.html  searchindex.js
.github/workflows/: gh_pages.yml  mypy_analysis.yml  pytest_analysis.yml
_modules/: index.html
_sources/: bonds.rst.txt  config_settings.rst.txt  custom.rst.txt  external_environment.rst.txt  feature_list.rst.txt  feature_notes.rst.txt  index.rst.txt  modules_user.rst.txt  notes.rst.txt  output.rst.txt
_static/: activate_datatables.js  custom_datatable.css
docs/: Makefile  bonafide.features.rst  bonafide.rst  bonafide.utils.rst  bonafide_user.rst  conf.py  dependencies.rst  electronic_structure.rst  feature_notes.rst  features.rst  index.rst  input.rst  installation.rst  modules.rst  references.bib
examples/: all_2D_features.py  all_3D_features.py  amine_workflow_single.py  custom_functional_group.ipynb  getting_started.ipynb  helper_functions.py
tests/: __init__.py  conftest.py  test_log_file_analysis.py
(+237 files in other folders)
